--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,12 @@
                 <h3><a href="/test">Pon a prueba tus conocimientos</a></h3>
                 <p>Haz clic aquí para hacer un test de formulación química y comprobar cuánto sabes.</p>
             </div>
+
+            {# Nuevo div para el Informe del Proyecto #}
+            <div class="desplegable">
+                <h3><a href="/informe_proyecto">Informe del Proyecto</a></h3>
+                <p>Haz clic aquí para ver el informe completo de este proyecto.</p>
+            </div>
         </div>
     </div>
     <div class="footer">
