--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -35,7 +35,7 @@
             <div class="navbar-item"><a href="/informacion">Información Clave</a></div>
             <div class="navbar-item"><a href="/test">Test de Conocimientos</a></div>
             <div class="navbar-item"><a href="/informe_proyecto">Informe del Proyecto</a></div>
-            <div class="navbar-item"><a href="/comentarios">Comentarios</a></div>{# Nuevo enlace #}
+            <div class="navbar-item"><a href="/comentarios">Comentarios</a></div>{# Reordenado #}
         </div>
     </nav>
 
