--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
             <div class="navbar-item"><a href="/informacion">Información Clave</a></div>
             <div class="navbar-item"><a href="/test">Test de Conocimientos</a></div>
             <div class="navbar-item"><a href="/informe_proyecto">Informe del Proyecto</a></div>
-            <div class="navbar-item"><a href="/comentarios">Comentarios</a></div>{# Reordenado #}
+            <div class="navbar-item"><a href="/comentarios">Comentarios</a></div>{# ORDENADO: a la derecha de Informe del Proyecto #}
         </div>
     </nav>
 
