--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
             <div class="navbar-item"><a href="/informacion">Información Clave</a></div>
             <div class="navbar-item"><a href="/test">Test de Conocimientos</a></div>
             <div class="navbar-item"><a href="/informe_proyecto">Informe del Proyecto</a></div>
-            <div class="navbar-item"><a href="/comentarios">Comentarios</a></div>{# ORDENADO: a la derecha de Informe del Proyecto #}
+            <div class="navbar-item"><a href="/comentarios">Comentarios</a></div>{# ORDENADO: a la derecha de Informe del Proyecto en la barra de navegación #}
         </div>
     </nav>
 
@@ -92,10 +92,14 @@
                 <p>Haz clic aquí para hacer un test de formulación química y comprobar cuánto sabes.</p>
             </div>
 
-            {# Nuevo div para el Informe del Proyecto #}
             <div class="desplegable">
                 <h3><a href="/informe_proyecto">Informe del Proyecto</a></h3>
                 <p>Haz clic aquí para ver el informe completo de este proyecto.</p>
+            </div>
+
+            <div class="desplegable">
+                <h3><a href="/comentarios">Comentarios y Sugerencias</a></h3>{# Nuevo div para Comentarios en la cuadrícula #}
+                <p>Haz clic aquí para dejar tus comentarios o sugerencias para mejorar la aplicación.</p>
             </div>
         </div>
     </div>
